[tool.poetry]
name = "benchmark-sqlite"
version = "0.1.0"
description = ""
authors = ["Bruno Bernard <contact.brunobernard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.4"
numpy = "^2.0.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
